<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities_and_intents.MainActivityCodingChallenge"
    android:background="@drawable/first_ui_selector">


    <TextView
        android:id="@+id/song_choose_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/choose_song_textview"
        android:textSize="24sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gruppa_krovi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/who_doesnt_celebrate_christmas_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_choose_textView" />

    <Button
        android:id="@+id/zvezda_sun_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/macaroons_title"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gruppa_krovi_button" />

    <Button
        android:id="@+id/vosmiklassnitsa_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/was_it_better_before_title"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zvezda_sun_button" />
</androidx.constraintlayout.widget.ConstraintLayout>